[package]
name = "seed-datepicker"
version = "0.1.0"
authors = ["Tomas Miklovic <tommket@gmail.com>"]
edition = "2018"
categories = ["wasm", "web-programming", "gui"]
description = "Customizable datepicker component for the Seed framework"
exclude = [".github/**/*", "static/**/*", "examples/**/*"]
keywords = ["seed", "wasm", "gui", "datepicker"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tommket/seed-datepicker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = "0.8"
chrono = { version = "0.4", features = ["wasmbind"] }
num-traits = { version = "0.2", default-features = false }
derive_builder = "0.9"
derive-getters = "0.2"
cfg-if = "1.0"

# just some cfg macros for automocking
mockall_double = "0.2"

[dev-dependencies]
proptest = "0.10"
criterion = "0.3"
mockall = "0.9"

[[bench]]
name = "config_benchmark"
harness = false
