[package]
name = "datepicker-with-textbox"
version = "0.1.0"
authors = ["Tomas Miklovic <tommket@gmail.com>"]
edition = "2018"
categories = ["wasm", "web-programming", "gui"]
description = "Customizable datepicker component for the Seed framework"
exclude = [".github/**/*"]
keywords = ["seed", "wasm", "gui", "datepicker"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tommket/seed-datepicker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed-datepicker = { path = "../../" }
seed = "0.8"
chrono = { version = "0.4", features = ["wasmbind"] }
